{
    "name": "InputManager",
    "maps": [
        {
            "name": "Keyboard",
            "id": "7d2a8c93-bf3d-4a8b-a822-669d6421ad4d",
            "actions": [
                {
                    "name": "ForwardMovementInput",
                    "type": "PassThrough",
                    "id": "7b13b10d-675b-4537-9302-458ec7397021",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LiftingInput",
                    "type": "PassThrough",
                    "id": "3f2346b1-3c24-4598-8577-3dac78d691ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "6111bba7-8213-42d4-99df-cdde019dd99b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMovementInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "141b6b37-a696-4b61-9a3d-53f16f8df169",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "614b0eb0-1ff7-4966-bb34-4301a928561b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForwardMovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "d216cc61-262f-41b4-92a7-172c068fc48d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LiftingInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6f2986ad-aeac-471e-9c03-f52fe4b77e20",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LiftingInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "acd97774-21f0-4d71-90dd-e3a87b2b0fe9",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LiftingInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}